# simple-usdview

./: CMakeLists.txt  README.md  display.nolight.usda  display.usda  vcpkg.json
src/: CMakeLists.txt  FreeCamera.cpp  FreeCamera.h  MainWindow.cpp  MainWindow.h  Outliner.cpp  Outliner.h  Settings.h  StageViewWidget.cpp  StageViewWidget.h  StageViewWindow.cpp  StageViewWindow.h  main.cpp  resources.qrc  styles.qss
